[gd_scene load_steps=30 format=2]

[ext_resource path="res://images/Interior.png" type="Texture" id=1]
[ext_resource path="res://ManCave_Level/ManCaveScene.gd" type="Script" id=2]
[ext_resource path="res://ManCave_Level/SignTrigger.gd" type="Script" id=3]
[ext_resource path="res://ManCave_Level/sign.png" type="Texture" id=4]
[ext_resource path="res://ManCave_Level/TVTrigger.gd" type="Script" id=5]
[ext_resource path="res://ManCave_Level/tv_off.png" type="Texture" id=6]
[ext_resource path="res://ManCave_Level/tv_on.png" type="Texture" id=7]
[ext_resource path="res://ManCave_Level/table.png" type="Texture" id=8]
[ext_resource path="res://ManCave_Level/XboxControllerTrigger.gd" type="Script" id=9]
[ext_resource path="res://ManCave_Level/bbq-pit.png" type="Texture" id=10]
[ext_resource path="res://ManCave_Level/tv-remote.png" type="Texture" id=11]
[ext_resource path="res://ManCave_Level/xbox-controller.png" type="Texture" id=12]
[ext_resource path="res://ManCave_Level/MomTrigger.gd" type="Script" id=13]
[ext_resource path="res://ManCave_Level/mom.png" type="Texture" id=14]
[ext_resource path="res://Fonts/Cactus Reguar DFont.tres" type="DynamicFont" id=15]
[ext_resource path="res://Fonts/Cactus Regular.tres" type="DynamicFontData" id=16]
[ext_resource path="res://SuccessLabel.gd" type="Script" id=17]
[ext_resource path="res://Next_Trigger.gd" type="Script" id=18]
[ext_resource path="res://images/GameOverGirl.png" type="Texture" id=19]
[ext_resource path="res://GameOverGirl.gd" type="Script" id=20]
[ext_resource path="res://Retry_Trigger.gd" type="Script" id=21]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 105.13, 66.7583 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 215.298, 110.466 )

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 93.3259, 116.677 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 48.0812

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 53.0396, 170.939 )

[sub_resource type="DynamicFont" id=5]

size = 112
use_mipmaps = false
use_filter = false
font_data = ExtResource( 16 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 16.1798, 10 )

[node name="ManCaveScene" type="Sprite" index="0"]

texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="SignTrigger" type="Area2D" parent="." index="0"]

position = Vector2( 902.298, 86.2182 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )

[node name="sign" type="Sprite" parent="SignTrigger" index="0"]

position = Vector2( 0.350769, 0.300301 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SignTrigger" index="1"]

shape = SubResource( 7 )

[node name="TVTrigger" type="Area2D" parent="." index="1"]

position = Vector2( 545.45, 145.493 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )

[node name="tv_off" type="Sprite" parent="TVTrigger" index="0"]

position = Vector2( -0.247925, 1.49776 )
texture = ExtResource( 6 )

[node name="tv_on" type="Sprite" parent="TVTrigger" index="1"]

visible = false
position = Vector2( -0.241638, 1.30031 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TVTrigger" index="2"]

shape = SubResource( 8 )

[node name="table" type="Sprite" parent="." index="2"]

position = Vector2( 227.265, 435.119 )
texture = ExtResource( 8 )

[node name="BBQPitTrigger" type="Area2D" parent="." index="3"]

position = Vector2( 546.477, 426.525 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 9 )

[node name="bbq-pit" type="Sprite" parent="BBQPitTrigger" index="0"]

texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BBQPitTrigger" index="1"]

shape = SubResource( 1 )

[node name="TVRemoteTrigger" type="Area2D" parent="." index="4"]

position = Vector2( 276.241, 314.301 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 9 )

[node name="tv-remote" type="Sprite" parent="TVRemoteTrigger" index="0"]

position = Vector2( 2.58896, -3.18292 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TVRemoteTrigger" index="1"]

position = Vector2( 2.58897, -4.8484 )
scale = Vector2( 4.24986, 5.28871 )
shape = SubResource( 2 )

[node name="XboxControllerTrigger" type="Area2D" parent="." index="5"]

position = Vector2( 176.794, 325.35 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 9 )

[node name="xbox-controller" type="Sprite" parent="XboxControllerTrigger" index="0"]

position = Vector2( -6.00525, -1.95517 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="XboxControllerTrigger" index="1"]

position = Vector2( -7.36639, -2.45551 )
shape = SubResource( 3 )

[node name="MomTrigger" type="Area2D" parent="." index="6"]

position = Vector2( 871.761, 386.784 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 13 )

[node name="mom" type="Sprite" parent="MomTrigger" index="0"]

position = Vector2( 1.09488, -1.65131 )
texture = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MomTrigger" index="1"]

shape = SubResource( 4 )

[node name="LevelLabel" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 9.0
margin_right = 453.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Level 5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Size Flags", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="SuccessLabel" type="Label" parent="." index="8"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 180.0
margin_right = 784.0
margin_bottom = 282.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Feel the Joy!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 17 )
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Next_Trigger" type="Area2D" parent="SuccessLabel" index="0"]

position = Vector2( 280, 140 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 18 )

[node name="Next Label" type="Label" parent="SuccessLabel/Next_Trigger" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -30.0
margin_right = 98.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Continue!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuccessLabel/Next_Trigger" index="1"]

position = Vector2( 10, -10 )
scale = Vector2( 5.5625, 2.42308 )
shape = SubResource( 6 )

[node name="TidyText" type="Label" parent="SuccessLabel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 360.0
margin_right = 523.0
margin_bottom = 418.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Does it spark filth?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Size Flags", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="GameOverGirl" type="Sprite" parent="." index="9"]

visible = false
texture = ExtResource( 19 )
centered = false
script = ExtResource( 20 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Retry_Trigger" type="Area2D" parent="GameOverGirl" index="0"]

position = Vector2( 490, 270 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 21 )

[node name="Retry Label" type="Label" parent="GameOverGirl/Retry_Trigger" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = -30.0
margin_right = 79.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Retry?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverGirl/Retry_Trigger" index="1"]

position = Vector2( 10, -10 )
scale = Vector2( 5.5625, 2.42308 )
shape = SubResource( 6 )

[node name="GameOverLabel" type="Label" parent="GameOverGirl" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 280.0
margin_top = 120.0
margin_right = 734.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Game Over!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]


